examples/test/testpolicy6600.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6600
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key33: value35
      key38: value31
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value46
          key28: value33
          key17: value38
      podSelector:
        matchLabels:
          key47: value34
